# gOpenMol

./: COPYRIGHT  README-GLUT-win32.txt  README.txt  environment.txt  install  install.bat  install.tcl  issues.txt
CMpeg1.0/: CMpeg.doc  I.CTL  IPB.CTL  PVRG.CTL  Thumbs.db  sample.mpg
DMpeg1.1/: Thumbs.db
Probsurf_shared/: Makefile  probsurf.c  probsurf1.2.c  probsurf2.0.c  test.c
data/: .gopenmolrc  alldna.dic  atom.dic  atom_conversion.data  atom_param.data  atomh.dic  atompol.dic  cli__line_input.data  colour_by_atom  colour_table.data  element.data  gbl__line_input.data  generic.dic  gopenmol_guirc.tcl  gopenmolrc.tcl  html_library.tcl  labelit  masses.rtf  nohdna.dic  sample.tcl  scare_param.par  scott-demo.tcl  signature
demo/: Thumbs.db  atomh.dic  demo1.tcl  demo2.tcl  demo3.tcl  demo4.tcl  demo5.tcl  demo6.tcl  demos.bat  demos.csh  demos.inp  density.crd  density.plt  dyn4pti.dcd  f100_force.crd  h2o001.xyz  junk1.crd  junk2.crd  min_force.crd  one.crd  opt4pti.crd  orbital.crd  orbital.plt  oxaz.plt  oxaz_min.crd  probesurf.inp  probesurf.plt  reacpth.xmol  show1.gom  show2.gom  show3.gom  show4.gom  show5.gom  show6.gom  test.gom  ts4pti.crd  water.crd
density/: Makefile  acet.eht  density.c  ethy.eht
docs/: final_guide.doc
src/: Makefile  Makefile.cvs  README.txt  config.h  config.h.in  config.mk  config.mk.ac  config.status  configure  configure.ac  libtool
src/general/: Makefile  alloc_fac.c  alloc_fac.d  atom_handling.c  atom_handling.d  atom_param.c  atom_param.d  avstruc.c  avstruc.d  calc_quatfit.c  calc_quatfit.d  callback.c  callback.d  cluster_manager.c  cluster_manager.d  colouring.c  colouring.d  coord_man.c  coord_man.d  correl.c  correl.d  data_structure.c  data_structure.d  defcell.c  defcell.d  diagonalize.c  diagonalize.d  edit_bond.c  edit_bond.d  findhbonds.c  findhbonds.d  findssbonds.c  findssbonds.d  format.c  format.d  input_gen.c  input_gen.d  iso_file_io.c  iso_file_io.d  ldp_control.c  (+53 more)
src/graphics/: Makefile  depends.mk  g_Mmain.c  g_Mmain.d  g_Mmake.c  g_Mmake.d  g_clusterdriver.c  g_clusterdriver.d  g_coloring.c  g_coloring.d  g_contdriver.c  g_contdriver.d  g_contour.c  g_contour.d  g_contplane.c  g_contplane.d  g_font_manager.c  g_font_manager.d  g_hardcopy.c  g_hardcopy.d  g_isocurve.c  g_isocurve.d  g_ldpdriver.c  g_ldpdriver.d  g_light_models.c  g_light_models.d  g_main.c  g_main.d  g_manipulate.c  g_manipulate.d  g_opengl_util.c  g_opengl_util.d  g_output.c  g_output.d  g_plot.c  g_plot.d  g_plot_cell.c  g_plot_cell.d  g_plot_cluster.c  g_plot_cluster.d  (+34 more)
src/graphics/gom-dynamic.dSYM/Contents/: Info.plist
src/graphics/gom-dynamic.dSYM/Contents/Resources/DWARF/: gom-dynamic
src/graphics/main/: main.c
src/include/: atom_param.h  axis.h  bond.h  cell.h  cluster.h  colors.h  colouring.h  contour.h  coord_file.h  coord_man.h  correl.h  drawscene.h  g_status.h  gaussian.h  gomcast.h  gomcext.h  gomclipbrd.h  gomdefs.h  gomendian.h  gomenv.h  gomext.tcl  gomfile.h  gomfmt.h  gomhelp.h  gomimage.h  gomlistener.h  gomlog.h  gommain.h  gommath.h  gommonitor.h  gomproc.h  gomstdio.h  gomstring.h  gomtcl.h  gomtext.h  gomversion.h  gomwindow.h  hardcopy.h  isovis.h  label.h  (+37 more)
src/include/GL/: glut.h
src/include/gomlib/: Doxyfile  gopenmolext.h
src/parser/: Makefile  p_atom.c  p_atom.d  p_calculatec.c  p_calculatec.d  p_center.c  p_center.d  p_contourc.c  p_contourc.d  p_copy.c  p_copy.d  p_definec.c  p_definec.d  p_diagonalize.c  p_diagonalize.d  p_display.c  p_display.d  p_editc.c  p_editc.d  p_exportc.c  p_exportc.d  p_fillc.c  p_fillc.d  p_findc.c  p_findc.d  p_hardcopyc.c  p_hardcopyc.d  p_helpc.c  p_helpc.d  p_manipulatec.c  p_manipulatec.d  p_monitorc.c  p_monitorc.d  p_openc.c  p_openc.d  p_parser.c  p_parser.d  p_plotc.c  p_plotc.d  p_plumberc.c  (+49 more)
src/plugins/: Makefile  config.mk  config.mk.ac  nodeps.d  rules.mk
src/plugins/ball/: Makefile  ball.c  ball.d
src/plugins/fchk203/: Makefile  cmdlist.txt  complex.cpp  complex.d  complex.h  fchk_lul.tcl  fchkint.cpp  fchkint.d  fchkrdr.cpp  fchkrdr.d  fchkrdr.h  gaussians.cpp  gaussians.d  gaussians.h  gaussiansb.cpp  gaussiansb.d  impfchk.cpp  impfchk.d  impfchk.h  keys.cpp  keys.d  keys.h  matrices.cpp  matrices.d  matrices.h  parser.cpp  parser.d  parser.h  rannos.cpp  rannos.d  rannos.hpp  tclacc.cpp  tclacc.d  tclacc.h
src/plugins/filters/: Makefile  filters.cpp  filters.d
src/plugins/sararea/: Makefile  bunch.cpp  bunch.d  bunch.h  gullick.cpp  gullick.d  gullick.h  surfarea.cpp  surfarea.d  surfstuff.bas
src/plugins/surfarea/: gullick.cpp  gullick.h  save-p~1.tcl  surfarea.cpp
src/plugins/sym602/: Makefile  align.cpp  align.d  align.h  altest.cpp  altest.d  altest.h  symmetry.cpp  symmetry.d  symmetry.h
src/plugins/sym602/tba/: complex.cpp  complex.d  complex.h  matrix.cpp  matrix.d  matrix.h
src/plugins/vrml/: Makefile  ReadMe.txt  vrml.cpp  vrml.d  vrml.h  vrmladd.tcl
src/readwrite/: Makefile  rw_get_frame_amber.c  rw_get_frame_amber.d  rw_get_frame_ambera.c  rw_get_frame_ambera.d  rw_get_frame_cerius2.c  rw_get_frame_cerius2.d  rw_get_frame_charmm.c  rw_get_frame_charmm.d  rw_get_frame_discover.c  rw_get_frame_discover.d  rw_get_frame_dl_poly.c  rw_get_frame_dl_poly.d  rw_get_frame_gromacs.c  rw_get_frame_gromacs.d  rw_get_frame_gromos.c  rw_get_frame_gromos.d  rw_get_frame_gromos96a.c  rw_get_frame_gromos96a.d  rw_get_frame_hyper.c  rw_get_frame_hyper.d  rw_get_frame_mumod.c  rw_get_frame_mumod.d  rw_get_frame_tinker.c  rw_get_frame_tinker.d  rw_get_frame_xmol.c  rw_get_frame_xmol.d  rw_get_frame_xplor.c  rw_get_frame_xplor.d  rw_get_frame_yasp.c  rw_get_frame_yasp.d  rw_gotobmp.c  rw_gotobmp.d  rw_gotosgi.c  rw_gotosgi.d  rw_gototga.c  rw_gototga.d  rw_gotoxwd.c  rw_gotoxwd.d  rw_ramber.c  (+39 more)
src/scripts/: checkheaders  dos2unix.sh  mergemakes  mkindex.tcl  untabify.sh
src/unix/: gom.m4  gomdep.m4  gompackage.m4  gomprintf.m4  gomprogram.m4  gompython.m4  gomtcl.m4  ltconfig
src/unix/make/: build.mk  compile.mk  gmake.mk  gomapi.mk  init.mk.ac  install.mk  non-gmake.mk  subdir.mk.ac  top.mk.ac  utility.mk.ac
src/utility/: Makefile
(+397 files in other folders)
